# ray-whisper

./: Dockerfile  README.md  main.py  pyproject.toml  serve_config.yaml  start.sh
app/: whisperx_worker.py
ui/: gradio_ui.py  gradio_ui_progress.py
