[project]
name = "ray-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gradio>=5.31.0",
    "ray[serve]>=2.5.0",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
    "whisperx>=3.3.4",
]


[tool.uv]
# Always install CTranslate2 4.5.0, regardless of whether transitive dependencies request
# a different version.
override-dependencies = ["ctranslate2==4.5.0"]